--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,28 @@
 {
   "compilerOptions": {
-    "module": "nodenext",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "es6",
     "noImplicitAny": true,
     "removeComments": true,
-    "preserveConstEnums": true,
+    "moduleResolution": "node",
     "sourceMap": false,
     "outDir": "dist",
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "node_modules/*",
+        "src/types/*"
+      ]
+    }
   },
-  "include": ["src/**/*"],
-  "exclude": ["**/*.spec.ts", "node_modules"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "**/*.spec.ts",
+    "node_modules"
+  ]
 }
