--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "activity-aggregator",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +13,10 @@
     "@swc/core": "^1.5.5",
     "@types/node": "^20.12.11",
     "add": "^2.0.6",
+    "dotenv": "^16.4.5",
+    "gulp": "^5.0.0",
+    "node-fetch": "^3.3.2",
     "typescript": "^5.4.5"
-  }
+  },
+  "description": ""
 }
