--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,21 @@
 NODE_ENV=development
 
+# SLACK
 SLACK_APP_WEBHOOK_URL=
 
+# CLICKUP
+CLICKUP_API_TOKEN=
+CLICKUP_TEAM_ID= # Workspace ID on ClickUp
+CLICKUP_USER_ID=
+
+# HARVEST
 HARVEST_ACCOUNT_ID=
 HARVEST_USER_ID=
 HARVEST_API_TOKEN=
 
-### COMING SOON
-# CLICKUP_API_TOKEN=
-# CLICKUP_WORKSPACE_ID=
-# CLICKUP_USER_ID=
+# GITHUB
+GITHUB_TOKEN=
+
+
+### PRODUCTION
+# SLACK_APP_WEBHOOK_URL=
