--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/register": "^7.23.7",
     "@swc/cli": "^0.3.12",
     "@swc/core": "^1.5.5",
     "@types/node": "^20.12.11",
@@ -17,5 +20,8 @@
     "gulp": "^5.0.0",
     "typescript": "^5.4.5"
   },
-  "description": ""
+  "description": "",
+  "babel": {
+    "presets": ["@babel/env"]
+  }
 }
