--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "activity-aggregator",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/update.js",
+  "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +21,6 @@
     "gulp": "^5.0.0",
     "typescript": "^5.4.5"
   },
-  "description": "",
   "babel": {
     "presets": ["@babel/env"]
   }
